--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/Vendors/googletest"]
 	path = src/Vendors/googletest
 	url = https://github.com/google/googletest.git
+[submodule "src/Vendors/tinygltf"]
+	path = src/Vendors/tinygltf
+	url = https://github.com/syoyo/tinygltf.git
